# chordcat

./: .clang-format  .gitignore  CHANGELOG.org  CMakeLists.txt  README.md  README.org  hugo.toml  steps.md  steps.txt
.github/workflows/: hugo.yaml
archetypes/: default.org
assets/fonts/FirstTimeWriting/: GGBotNet Fonts.URL
assets/fonts/Noto_Music/: OFL.txt
assets/fonts/Questrial/: OFL.txt
content/: _index.org
content/docs/: building-from-source.org  changing-instruments.org  changing-the-key.org  installing-from-binaries.org  packaging.org  playing-notes.org  using-the-looper.org
desktop/: chordcat.icns  chordcat.rc  convert.sh  dev.ters.Chordcat.desktop  dev.ters.Chordcat.metainfo.xml
src/: app_state.hpp  chord.hpp  chord_db.hpp  config.h.in  gm_instrument_table.hpp  grand_staff.cpp  grand_staff.hpp  key.hpp  looper.cpp  looper.hpp  main.cpp  main_screen.cpp  main_screen.hpp  metronome.hpp  midi_audio_stream.hpp  midi_event.hpp  piano.cpp  piano.hpp  preferences.cpp  preferences.hpp  scale_db.hpp  sound_font_manager.cpp  sound_font_manager.hpp  utils.hpp
